--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="#" class="primary-button Get-started-btn">Get Started</a>
             </div>
             <div class="header-right">
-                <img src="/Assets/asset 2.jpeg" alt="image here">
+                <img src="Assets/asset 2.jpeg" alt="image here">
             </div>
         </div>
     </header>
@@ -50,13 +50,13 @@
             <p>The world’s best companies rely on UsabilityHub to make better design decisions.</p>
         </div>
         <div class="logos flex">
-            <img src="/Assets/asset 3.png" alt="" class="logo">
-            <img src="/Assets/asset 4.png" alt="" class="logo">
-            <img src="/Assets/asset 5.png" alt="" class="logo">
-            <img src="/Assets/asset 6.png" alt="" class="logo">
-            <img src="/Assets/asset 7.png" alt="" class="logo">
-            <img src="/Assets/asset 8.svg" alt="" class="logo">
-            <img src="/Assets/asset 9.png" alt="" class="logo">
+            <img src="Assets/asset 3.png" alt="" class="logo">
+            <img src="Assets/asset 4.png" alt="" class="logo">
+            <img src="Assets/asset 5.png" alt="" class="logo">
+            <img src="Assets/asset 6.png" alt="" class="logo">
+            <img src="Assets/asset 7.png" alt="" class="logo">
+            <img src="Assets/asset 8.svg" alt="" class="logo">
+            <img src="Assets/asset 9.png" alt="" class="logo">
         </div>
     </section>
     <section class="features-section">
@@ -68,42 +68,42 @@
             </div>
             <div class="features-cards flex">
                 <div class="card flex">
-                    <img src="/Assets/asset 11.svg" alt="">
+                    <img src="Assets/asset 11.svg" alt="">
                     <h3>Card sorting</h3>
                     <p>Discover how people group and label information.</p>
                     <a href="#" class="secondary-button">Learn more <i
                             class="fa-sharp fa-solid fa-arrow-right-long"></i></a>
                 </div>
                 <div class="card flex">
-                    <img src="/Assets/asset 13.svg" alt="">
+                    <img src="Assets/asset 13.svg" alt="">
                     <h3>Prototype tests</h3>
                     <p>Discover how people navigate your Figma prototypes.</p>
                     <a href="#" class="secondary-button">Learn more <i
                             class="fa-sharp fa-solid fa-arrow-right-long"></i></a>
                 </div>
                 <div class="card flex">
-                    <img src="/Assets/asset 14.svg" alt="">
+                    <img src="Assets/asset 14.svg" alt="">
                     <h3>First click tests</h3>
                     <p>Test interaction with first click and navigation tests.</p>
                     <a href="#" class="secondary-button">Learn more <i
                             class="fa-sharp fa-solid fa-arrow-right-long"></i></a>
                 </div>
                 <div class="card flex">
-                    <img src="/Assets/asset 15.svg" alt="">
+                    <img src="Assets/asset 15.svg" alt="">
                     <h3>Design surveys</h3>
                     <p>Get feedback on images, videos or audio files.</p>
                     <a href="#" class="secondary-button">Learn more <i
                             class="fa-sharp fa-solid fa-arrow-right-long"></i></a>
                 </div>
                 <div class="card flex">
-                    <img src="/Assets/asset 16.svg" alt="">
+                    <img src="Assets/asset 16.svg" alt="">
                     <h3>Preference tests</h3>
                     <p>Find out which designs users prefer and why.</p>
                     <a href="#" class="secondary-button">Learn more <i
                             class="fa-sharp fa-solid fa-arrow-right-long"></i></a>
                 </div>
                 <div class="card flex">
-                    <img src="/Assets/asset 17.svg" alt="">
+                    <img src="Assets/asset 17.svg" alt="">
                     <h3>Five second tests</h3>
                     <p>Test comprehensibility by measuring first impressions.</p>
                     <a href="#" class="secondary-button">Learn more <i
@@ -115,7 +115,7 @@
     <section class="big-features-section">
         <div class="container flex">
             <div class="feature-img">
-                <img src="/Assets/asset 18.png" alt="">
+                <img src="Assets/asset 18.png" alt="">
             </div>
             <div class="feature-content">
                 <h3 style="font-size: 1.2rem;">Effortless validation for</h3>
@@ -132,12 +132,12 @@
                     campaigns and product launches.</p>
             </div>
             <div class="feature-img">
-                <img src="/Assets/asset 21.png" alt="">
+                <img src="Assets/asset 21.png" alt="">
             </div>
         </div>
         <div class="container flex">
             <div class="feature-img">
-                <img src="/Assets/asset 24.png" alt="">
+                <img src="Assets/asset 24.png" alt="">
             </div>
             <div class="feature-content">
                 <h3 style="font-size: 1.2rem;">Easier decision making for</h3>
@@ -301,8 +301,8 @@
                 </div>
                 <div class="subfooter-images flex">
                     <img src="Assets/asset 28.png" alt="">
-                    <img src="/Assets/asset 29.png" alt="">
-                    <img src="/Assets/asset 30.png" alt="">
+                    <img src="Assets/asset 29.png" alt="">
+                    <img src="Assets/asset 30.png" alt="">
                     <img src="Assets/asset 31.png" alt="">
                 </div>
             </div>
