--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
         <div class="container flex">
             <a href="#" class="company-logo">
-                <img src="/Assets/asset 1.png" alt="company logo">
+                <img src="Assets/asset 1.png" alt="company logo">
             </a>
             <div class="nav-links">
                 <ul class="flex">
